force-app/main/default/objects/GfAmsWarehousing__c/GfAmsWarehousing__c.object-meta.xml
<CustomObject>
    <label>Warehousing (Old)</label>
    <nameField>
        <displayFormat>WN{YYYYMMDD}{00000}</displayFormat>
        <label>Warehousing No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>