force-app/main/default/objects/GfAmsWarehousing__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Agency</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipName>Warehousing</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>