force-app/main/default/objects/GfAmsWarehousing__c/fields/AmountOk__c.field-meta.xml
<CustomField>
    <fullName>AmountOk__c</fullName>
    <formula>NetAmountOk__c + TaxAmountOk__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Ok</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>