force-app/main/default/objects/GfAmsWarehousing__c/fields/NetAmount__c.field-meta.xml
<CustomField>
    <fullName>NetAmount__c</fullName>
    <label>Net Amount</label>
    <summarizedField>GfAmsWarehousingItem__c.NetAmount__c</summarizedField>
    <summaryForeignKey>GfAmsWarehousingItem__c.GfAmsWarehousing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>