force-app/main/default/objects/GfAmsWarehousing__c/fields/NetAmountOk__c.field-meta.xml
<CustomField>
    <fullName>NetAmountOk__c</fullName>
    <label>Net Amount Ok</label>
    <summarizedField>GfAmsWarehousingItem__c.NetAmountOk__c</summarizedField>
    <summaryForeignKey>GfAmsWarehousingItem__c.GfAmsWarehousing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>