force-app/main/default/objects/GfAmsWarehousing__c/fields/PurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>InventoryOutOrder__c</referenceTo>
    <relationshipName>Warehousing</relationshipName>
    <type>Lookup</type>
</CustomField>