force-app/main/default/objects/GfAmsWarehousing__c/fields/Registor__c.field-meta.xml
<CustomField>
    <fullName>Registor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Warehousing</relationshipName>
    <type>Lookup</type>
</CustomField>