force-app/main/default/objects/GfAmsWarehousing__c/fields/ReleaseConfirm__c.field-meta.xml
<CustomField>
    <fullName>ReleaseConfirm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release Confirm</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Warehousing1</relationshipName>
    <type>Lookup</type>
</CustomField>