force-app/main/default/objects/GfAmsWarehousing__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <label>Tax Amount</label>
    <summarizedField>GfAmsWarehousingItem__c.TaxAmount__c</summarizedField>
    <summaryForeignKey>GfAmsWarehousingItem__c.GfAmsWarehousing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>