force-app/main/default/objects/GfAmsWarehousing__c/fields/TaxAmountOk__c.field-meta.xml
<CustomField>
    <fullName>TaxAmountOk__c</fullName>
    <label>Tax Amount Ok</label>
    <summarizedField>GfAmsWarehousingItem__c.TaxAmountOk__c</summarizedField>
    <summaryForeignKey>GfAmsWarehousingItem__c.GfAmsWarehousing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>